# simple_func_timer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
tests/: invalid_log_args.rs  invalid_unit_args.rs  log_and_unit_args.rs  log_level_args.rs  no_args.rs  progress.rs  test_utils.rs  unit_args.rs
