[package]
name = "simple_func_timer"
version = "0.1.0"
license = "MIT"
authors = ["Makoto Kinoshita <mkinoshi12@gmail.com>"]
edition = "2018"
description = "Simple macro to measure the function execution time in Rust"
readme = "README.md"
homepage = "https://github.com/mkinoshi/simple_func_timer"
repository = "https://github.com/mkinoshi/simple_func_timer"
keywords = ["timer", "rust", "performance"]
categories = ["performance-measuring-utility"]
autotests = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "parsing"] }
quote = "1.0"
log = "0.4"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }